--- a/orchestrator/relayer/Cargo.toml
+++ b/orchestrator/relayer/Cargo.toml
@@ -30,9 +30,10 @@ lazy_static = "1"
 web30 = "0.15"
 log = "0.4"
 env_logger = "0.8"
-tokio = "1.4"
+tokio = { version = "1.4", features = ["fs"] }
 tonic = "0.4"
 openssl-probe = "0.1"
+serde_json = "1.0.68"
 
 [dev-dependencies]
 actix = "0.12"
