--- a/orchestrator/relayer/Cargo.toml
+++ b/orchestrator/relayer/Cargo.toml
@@ -34,6 +34,7 @@ tokio = { version = "1.4", features = ["fs"] }
 tonic = "0.4"
 openssl-probe = "0.1"
 serde_json = "1.0.68"
+reqwest = "0.11.10"
 
 [dev-dependencies]
 actix = "0.12"
