--- a/orchestrator/gravity_utils/Cargo.toml
+++ b/orchestrator/gravity_utils/Cargo.toml
@@ -11,6 +11,7 @@ gravity_abi = { path = "../gravity_abi" }
 gravity_proto = { path = "../gravity_proto/" }
 cosmos-sdk-proto = "0.6.3"
 deep_space = { git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
+eth_checksum = "0.1.2"
 ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch = "zaki/error_abi_support", features = ["abigen"] }
 web30 = "0.15"
 clarity = "0.4.11"
